# SAT-Solver

./: .gitignore  .gitmodules  Cargo.toml  README.md  drat-trim  test.txt
src/: cactus.rs  cdcl.rs  cli.rs  dpll.rs  heuristics.rs  heuristsics.rs  implication_graph.rs  lib.rs  logger.rs  main.rs  parse.rs  preprocessing.rs  randomrestarts.rs  solver.rs
src/cputime/: 60sec_Boehm.csv  60sec_DLCS.csv  60sec_DLIS.csv  60sec_DLIS.txt  60sec_Jeroslaw-Wang.csv  60sec_MOM.csv  60sec_arbitrary.csv  60sec_custom.csv  60sec_vsids.csv  cputime.rs  csv.md  duration_Boehm.csv  duration_DLCS.csv  duration_DLIS.csv  duration_Jeroslaw-Wang.csv  duration_MOM.csv  duration_arbitrary.csv  results.rs  results.txt  time.txt
src/visuals/: cactus.rs
src/visuals/graphs/: flamegraph.html  flamegraph.html.REMOVED.git-id
