[package]
name = "dpll_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["cargo"] }
criterion = "0.5.1"
flame = "0.2.2"
plotters = "0.3" 
csv = "1.1"


[profile.release]
debug = true

[lib]
name = "dpll_solver"
path = "src/lib.rs"

[[bin]]
name = "dpll" 
path = "src/main.rs" 

[[bin]]
name = "cputime"
path = "src/cputime/cputime.rs"
